--- a/WebApp/_Imports.razor
+++ b/WebApp/_Imports.razor
@@ -13,6 +13,7 @@
 @using Radzen.Blazor
 @using Sabatex.RadzenBlazor
 
-@using BankServiceFor1C8
-@using BankServiceFor1C8.Shared
+@using WebAppAnyBanksUA
+@using WebAppAnyBanksUA.Shared
+@using WebAppAnyBanksUA.Models
 
