--- a/WebApp/Shared/HowTo.razor
+++ b/WebApp/Shared/HowTo.razor
@@ -4,5 +4,5 @@
         <li>Введіть або виберіть банківський рахунок </li>
         <li>Виберіть підготовлений файл.</li>
         <li>Натисніть "Конвертувати"</li>
-        <li>Збережіть зконвертований файл в форматі .XML для наступного завантаження в програму 1С</li>
+        <li>Збережіть зконвертований файл в форматі .XML для наступного завантаження в програму BAS</li>
     </ul>
