--- a/WebApp/_Imports.razor
+++ b/WebApp/_Imports.razor
@@ -13,7 +13,7 @@
 @using Radzen.Blazor
 @using Sabatex.RadzenBlazor
 
-@using WebAppAnyBanksUA
-@using WebAppAnyBanksUA.Shared
-@using WebAppAnyBanksUA.Models
+@using AnyBanksUA
+@using AnyBanksUA.Shared
+@using AnyBanksUA.Models
 
