--- a/WebApp/Pages/ClientBank.razor
+++ b/WebApp/Pages/ClientBank.razor
@@ -153,7 +153,7 @@
                 string txt = string.Empty;
                 switch (resultType){
                     case ResultType.CSV_IBankUA:
-                        txt = result.GetAsSensBankCSV();
+                        txt = result.GetAsIBankUACSV();
                         resultTask.OutPutFile = f.Name + ".ibank.csv";
                         break;
                     case ResultType.CSV_PrivatBank:
